// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput: type Tel renders disabled 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 kydozM"
      disabled={true}
    >
      <label
        className="Label-sc-1rdea5p-0 irIYEK"
      >
        medium
      </label>
      <input
        className="Input-qkdgvx-0 dInVWZ"
        disabled={true}
        placeholder=" "
        type="tel"
        value="+372 123 4567"
      />
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 kydozM"
      disabled={true}
    >
      <label
        className="Label-sc-1rdea5p-0 irIYEK"
      >
        large
      </label>
      <input
        className="Input-qkdgvx-0 izGTPy"
        disabled={true}
        placeholder=" "
        type="tel"
        value="+372 123 4567"
      />
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 kydozM"
      disabled={true}
    >
      <div
        className="Inner-sc-1soq84i-0 bMgBMq"
      >
        <input
          className="Input-qkdgvx-0 gzqgWB"
          disabled={true}
          placeholder=" "
          type="tel"
          value="+372 123 4567"
        />
        <label
          className="LabelInner-vrrjt0-0 bMijKN"
        >
          xlarge
        </label>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Tel renders error 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fUwsfa"
    >
      <label
        className="Label-sc-1rdea5p-0 irIYEK"
      >
        medium
      </label>
      <input
        className="Input-qkdgvx-0 fCNdsc"
        placeholder="e.g. +372 123 4567"
        type="tel"
      />
      <p
        className="HintText-sc-1e9hzxr-0 gliQQD"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fUwsfa"
    >
      <label
        className="Label-sc-1rdea5p-0 irIYEK"
      >
        large
      </label>
      <input
        className="Input-qkdgvx-0 fKxCuv"
        placeholder="e.g. +372 123 4567"
        type="tel"
      />
      <p
        className="HintText-sc-1e9hzxr-0 gliQQD"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fUwsfa"
    >
      <div
        className="Inner-sc-1soq84i-0 bMgBMq"
      >
        <input
          className="Input-qkdgvx-0 coYWyI"
          placeholder="e.g. +372 123 4567"
          type="tel"
        />
        <label
          className="LabelInner-vrrjt0-0 bMijKN"
        >
          xlarge
        </label>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 gliQQD"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Tel renders readOnly 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fUwsfa"
    >
      <label
        className="Label-sc-1rdea5p-0 irIYEK"
      >
        medium
      </label>
      <input
        className="Input-qkdgvx-0 dInVWZ"
        placeholder=" "
        readOnly={true}
        type="tel"
        value="+372 123 4567"
      />
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fUwsfa"
    >
      <label
        className="Label-sc-1rdea5p-0 irIYEK"
      >
        large
      </label>
      <input
        className="Input-qkdgvx-0 izGTPy"
        placeholder=" "
        readOnly={true}
        type="tel"
        value="+372 123 4567"
      />
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fUwsfa"
    >
      <div
        className="Inner-sc-1soq84i-0 bMgBMq"
      >
        <input
          className="Input-qkdgvx-0 gzqgWB"
          placeholder=" "
          readOnly={true}
          type="tel"
          value="+372 123 4567"
        />
        <label
          className="LabelInner-vrrjt0-0 bMijKN"
        >
          xlarge
        </label>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Tel renders with hint 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fUwsfa"
    >
      <label
        className="Label-sc-1rdea5p-0 irIYEK"
      >
        medium
      </label>
      <input
        className="Input-qkdgvx-0 dInVWZ"
        placeholder="e.g. +372 123 4567"
        type="tel"
      />
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fUwsfa"
    >
      <label
        className="Label-sc-1rdea5p-0 irIYEK"
      >
        large
      </label>
      <input
        className="Input-qkdgvx-0 izGTPy"
        placeholder="e.g. +372 123 4567"
        type="tel"
      />
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fUwsfa"
    >
      <div
        className="Inner-sc-1soq84i-0 bMgBMq"
      >
        <input
          className="Input-qkdgvx-0 gzqgWB"
          placeholder="e.g. +372 123 4567"
          type="tel"
        />
        <label
          className="LabelInner-vrrjt0-0 bMijKN"
        >
          xlarge
        </label>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Tel renders with label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fUwsfa"
    >
      <label
        className="Label-sc-1rdea5p-0 irIYEK"
      >
        medium
      </label>
      <input
        className="Input-qkdgvx-0 dInVWZ"
        placeholder="e.g. +372 123 4567"
        type="tel"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fUwsfa"
    >
      <label
        className="Label-sc-1rdea5p-0 irIYEK"
      >
        large
      </label>
      <input
        className="Input-qkdgvx-0 izGTPy"
        placeholder="e.g. +372 123 4567"
        type="tel"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fUwsfa"
    >
      <div
        className="Inner-sc-1soq84i-0 bMgBMq"
      >
        <input
          className="Input-qkdgvx-0 gzqgWB"
          placeholder="e.g. +372 123 4567"
          type="tel"
        />
        <label
          className="LabelInner-vrrjt0-0 bMijKN"
        >
          xlarge
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Tel renders without label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fUwsfa"
    >
      <input
        className="Input-qkdgvx-0 dInVWZ"
        placeholder="medium"
        type="tel"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fUwsfa"
    >
      <input
        className="Input-qkdgvx-0 izGTPy"
        placeholder="large"
        type="tel"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fUwsfa"
    >
      <div
        className="Inner-sc-1soq84i-0 bMgBMq"
      >
        <input
          className="Input-qkdgvx-0 foTAnE"
          placeholder="xlarge"
          type="tel"
        />
        <label
          className="LabelInner-vrrjt0-0 bMijKN"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Tel supports background colour 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fUwsfa"
    >
      <label
        className="Label-sc-1rdea5p-0 irIYEK"
      >
        medium
      </label>
      <input
        className="Input-qkdgvx-0 bVigKL"
        placeholder="e.g. +372 123 4567"
        type="tel"
      />
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fUwsfa"
    >
      <label
        className="Label-sc-1rdea5p-0 irIYEK"
      >
        large
      </label>
      <input
        className="Input-qkdgvx-0 jstzOA"
        placeholder="e.g. +372 123 4567"
        type="tel"
      />
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fUwsfa"
    >
      <div
        className="Inner-sc-1soq84i-0 dKhopI"
      >
        <input
          className="Input-qkdgvx-0 gzqgWB"
          placeholder="e.g. +372 123 4567"
          type="tel"
        />
        <label
          className="LabelInner-vrrjt0-0 bMijKN"
        >
          xlarge
        </label>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;
